==> CU-Robotics/firmware/libraries/Modified-BMI160---BMM150-Arduino-Libraries-master/Grove_3_Axis_Compass_V2.0_BMM150/bmm150.cpp <==
#include "bmm150.h"
#include <Arduino.h>
#include <Wire.h>

int8_t BMM150::initialize(void)
{ 
  Wire.begin();

	/* Power up the sensor from suspend to sleep mode */
	set_op_mode(BMM150_SLEEP_MODE);
	delay(BMM150_START_UP_TIME);

	/* Check chip ID */
	uint8_t id = i2c_read(BMM150_CHIP_ID_ADDR);	
	if(id != BMM150_CHIP_ID) {
			return BMM150_E_ID_NOT_CONFORM;
	}

	/* Function to update trim values */
	read_trim_registers();

	/* Setting the power mode as normal */
	set_op_mode(BMM150_NORMAL_MODE);

	/* Setting the preset mode as Low power mode 
	i.e. data rate = 10Hz XY-rep = 1 Z-rep = 2*/
	set_presetmode(BMM150_PRESETMODE_LOWPOWER);
	// set_presetmode(BMM150_HIGHACCURACY_REPZ);
	
	//set_DRDY_bit(1);
	
  return BMM150_OK;
}

void BMM150::i2c_write(short address, short data)
{
    Wire.beginTransmission(BMM150_I2C_Address);
    Wire.write(address);
    Wire.write(data);
    Wire.endTransmission();
}

void BMM150::i2c_read(short address, uint8_t *buffer, short length)
{
    Wire.beginTransmission(BMM150_I2C_Address);
    Wire.write(address);
    Wire.endTransmission();
    Wire.requestFrom(BMM150_I2C_Address, length);
    
    if(Wire.available() == length)
    {
        for(uint8_t i = 0; i < length; i++)
        {
            buffer[i] = Wire.read();
        }
    }
}

void BMM150::i2c_read(short address, int8_t *buffer, short length)
{
    Wire.beginTransmission(BMM150_I2C_Address);
    Wire.write(address);
    Wire.endTransmission();
    Wire.requestFrom(BMM150_I2C_Address, length);
    
    if(Wire.available() == length)
    {
        for(uint8_t i = 0; i < length; i++)
        {
            buffer[i] = Wire.read();
        }
    }
}

uint8_t BMM150::i2c_read(short address)
{
    uint8_t byte;

    Wire.beginTransmission(BMM150_I2C_Address);
    Wire.write(address);
    Wire.endTransmission();
    Wire.requestFrom(BMM150_I2C_Address, 1);
    byte = Wire.read();
    return byte;
}
