==> rscinto/BMM150_STM32_F446RE/bmm150.cpp <==
#include "bmm150.h"
#include "stm32f4xx_hal.h"

int8_t BMM150::initialize(I2C_HandleTypeDef* hi2c1) {

    /* Power up the sensor from suspend to sleep mode */
    set_op_mode(BMM150_SLEEP_MODE, hi2c1);
    HAL_Delay(BMM150_START_UP_TIME);

    /* Check chip ID */
    uint8_t id = i2c_read(BMM150_CHIP_ID_ADDR, hi2c1);
    if (id != BMM150_CHIP_ID) {
        return BMM150_E_ID_NOT_CONFORM;
    }

    /* Function to update trim values */
    read_trim_registers(hi2c1);

    /* Setting the power mode as normal */
    set_op_mode(BMM150_NORMAL_MODE, hi2c1);

    /*  Setting the preset mode as Low power mode
        i.e. data rate = 10Hz XY-rep = 1 Z-rep = 2*/
    //set_presetmode(BMM150_PRESETMODE_LOWPOWER, hi2c1);


    return BMM150_OK;
}

void BMM150::i2c_write(short mem_address, short data, I2C_HandleTypeDef* hi2c1) {

	HAL_I2C_Mem_Write(hi2c1, (uint16_t)BMM150_I2C_Address<<1, mem_address, (uint16_t) 1, (uint8_t *)&data, (uint16_t)1, HAL_MAX_DELAY);

}

void BMM150::i2c_read(short mem_address, uint8_t* buffer, short length, I2C_HandleTypeDef* hi2c1) {

	HAL_I2C_Mem_Read(hi2c1, (uint16_t)BMM150_I2C_Address<<1, mem_address, (uint16_t) length,(uint8_t*) buffer, (uint16_t)length, HAL_MAX_DELAY);

}

void BMM150::i2c_read(short mem_address, int8_t* buffer, short length, I2C_HandleTypeDef* hi2c1) {
	 HAL_I2C_Mem_Read(hi2c1, (uint16_t)BMM150_I2C_Address<<1, mem_address, (uint16_t) length, (uint8_t*) buffer, (uint16_t)length, HAL_MAX_DELAY);
}

void BMM150::i2c_read(short mem_address, int8_t* buffer, short length, short bytes_to_grab, I2C_HandleTypeDef* hi2c1) {
	 HAL_I2C_Mem_Read(hi2c1, (uint16_t)BMM150_I2C_Address<<1, mem_address, (uint16_t) length, (uint8_t*) buffer, (uint16_t)bytes_to_grab, HAL_MAX_DELAY);
}

uint8_t BMM150::i2c_read(uint16_t mem_address, I2C_HandleTypeDef* hi2c1) {
    uint8_t byte;
    HAL_I2C_Mem_Read(hi2c1, (uint16_t)BMM150_I2C_Address<<1, mem_address, (uint16_t) 1, (uint8_t *)&byte, (uint16_t)1, HAL_MAX_DELAY);
    return byte;
}
